fix: replaced or removed usage of deprecated methods (#412)